<resources>
    <string name="app_name">Hydrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="hydrate_settings">Hydrate Settings</string>
    <string name="account_settings">Account Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- For Alert Dialogs -->
    <string name="yes">Yes</string>
    <string name="more_info">More Info</string>
    <string name="close">Close</string>
    <string name="ok">Okay</string>
    <string name="def">Default</string>
    <string name="email_def">Email</string>
    <string name="password_def">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="priority_measurements">Priority Measurements</string>
    <string name="distance">Distance</string>
    <string name="quality">Quality</string>
</resources>
