<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomSettingsActivity">

    <TextView
        android:id="@+id/hydrateSettings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/hydrate_settings"
        android:textColor="#E91E63"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hydrateSettings">

        <RadioGroup
            android:id="@+id/preferencesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/distanceButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/distance"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:checked="true" />

            <RadioButton
                android:id="@+id/qualityButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/quality"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/accountSettings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/account_settings"
        android:textColor="#E91E63"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/innerLayout" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountSettings" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/log_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>